--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,19 @@
     margin: 0;
     padding: 0;
 }
+.header{
+    background-color: #EDF2F7;
+    display: block;
+    margin-bottom: 30px;
+}
+.logo img{
+    margin-left: 40%;
+}
+
+
+.container {
+    width: 80%;
+    margin: 0 auto;
+    background-color: #EDF2F7;
+    padding: 20px;
+  }
